--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
     if: needs.get-changes.outputs.directories != '[]'
     strategy:
       matrix:
-        item: ${{ fromJson(needs.check-changes.outputs.directories) }}
+        item: ${{ fromJson(needs.get-changes.outputs.directories) }}
     steps:
     - name: display info
       run: |
