--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,8 @@ on:
 
 jobs:
   get-changes:
+    permissions:
+      contents: write
     runs-on: ubuntu-24.04
     name: generate-changed-dir-matrix
     outputs:
