--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,5 +38,8 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
+    - name: get version
+      uses: frozengoats/github-actions/version@version-v1
+      working-directory: ${{ matrix.item.path }}
     - name: build docker image
       run: make build
