--- a/sshd/Dockerfile
+++ b/sshd/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.21.3
 
-RUN apk upgrade --no-cache ; apk update --no-cache
-RUN apk add openssh openrc --no-cache
+RUN apk update --no-cache && \
+  apk add openssh openrc --no-cache
 
 COPY sshd_config /etc/ssh/sshd_config
 COPY entrypoint.sh /entrypoint.sh
