--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,6 +40,7 @@ jobs:
         fetch-depth: 0
     - name: get version
       uses: frozengoats/github-actions/version@version-v1
-      working-directory: ${{ matrix.item.path }}
+      with:
+        working-directory: ${{ matrix.item.path }}
     - name: build docker image
       run: make build
