--- a/sshd/Makefile
+++ b/sshd/Makefile
@@ -1,6 +1,10 @@
-VERSION := $(shell cat ./VERSION)
+VERSION ?= $(shell cat ./VERSION)
 IMAGE := frozengoats/ssh:$(VERSION)
 
 .PHONY: build
 build:
 	docker build -t $(IMAGE) .
+
+.PHONY: publish
+publish:
+	docker push -a $(IMAGE)
