--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -39,8 +39,16 @@ jobs:
       with:
         fetch-depth: 0
     - name: get version
+      id: version
       uses: frozengoats/github-actions/version@version-v1
       with:
         working-directory: ${{ matrix.item.path }}
     - name: build docker image
-      run: make build
+      run: VERSION=${{ version.outputs.version-tag }} make build
+    - name: tag major version of docker image
+      run: VERSION=${{ version.outputs.version-tag-major }} make build
+    - name: login to docker hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
