--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,9 +44,9 @@ jobs:
       with:
         working-directory: ${{ matrix.item.path }}
     - name: build docker image
-      run: VERSION=${{ version.outputs.version-tag }} make build
+      run: VERSION=${{ steps.version.outputs.version-tag }} make build
     - name: tag major version of docker image
-      run: VERSION=${{ version.outputs.version-tag-major }} make build
+      run: VERSION=${{ steps.version.outputs.version-tag-major }} make build
     - name: login to docker hub
       uses: docker/login-action@v3
       with:
