fixed publish step to omit tag

--- a/sshd/Makefile
+++ b/sshd/Makefile
@@ -1,9 +1,10 @@
 VERSION ?= $(shell cat ./VERSION)
-IMAGE := frozengoats/ssh:$(VERSION)
+IMAGE := frozengoats/ssh
+IMAGE_AND_TAG := $(IMAGE):$(VERSION)
 
 .PHONY: build
 build:
-	docker build -t $(IMAGE) .
+	docker build -t $(IMAGE_AND_TAG) .
 
 .PHONY: publish
 publish:
